<resources>

    <string name="numCompleteCoursesText">Number of Courses you are taking currently:</string>
    <string name="knownGradesText">Select your known Grades:</string>
    <string name="app_name">Course Tracker</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="predictedcgpa">Predicted</string>
    <string name="predictedgrades">Predicted Grades for:</string>
    <string name="CGPAstring">Based on your Completed Courses, Your Current CGPA is: </string>
    <string name="predictedcgpaphrase">Your predicted CGPA based on predicted grades is:</string>
    <string name="diffCGPA">Predict my next CGPA</string>
    <string name="gradesForCourses">Enter grades</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="mycourse_title">My Completed Courses: </string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="name">Grade:</string>
    <string name="course_id">Course ID:</string>
    <string name="predictTitle">Based on the grades you entered for your Current Courses, Your Predicted CGPA is: </string>
    <string name="currentCourse">My Current Courses</string>
    <string name="addReminderButton">Add/Edit</string>
    <string name="addReminderButton2">Delete</string>
    <string name="duedates">My Reminders</string>

    <string name="addReminderButton">Add/Edit</string>
    <string name="addReminderButton2">Delete</string>
    <string name="duedates">My Reminders</string>

  
    <string name="typeOfReminder">Type:</string>
    <string-array name="reminderTypes">
        <item>Assignment</item>
        <item>Quiz</item>
        <item>Midterm</item>
        <item>Final</item>
        <item>Project</item>
    </string-array>
    <string name="RemDate">Date:</string>
    <string name="RemDoneButton">DONE</string>
    <string name="addReminderButton2">Delete</string>
    <string name="duedates">My Reminders</string>
    <string name="welcomeText">Welcome To Course Tracker! Tap On The Menu On Top Left Corner To Get Started.</string>
    <string name="calculate_my_current_cgpa">Calculate my current CGPA</string>
    <string name="predict_my_next_cgpa">PREDICT MY NEXT CGPA</string>
    <string name="my_current_courses">My Current Courses</string>
    <string name="predict_my_cgpa">Predict my CGPA</string>

    <string name="navButton1">My Courses</string>
    <string name="navButton2">My Current CGPA</string>
    <string name="navButton3">Predict Next CGPA</string>
    <string name="navButton4">My Reminders</string>

    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="mycourse_title">My Completed Courses: </string>

</resources>

