<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uju.coursetracker.presentation.MyCompletedCoursesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mycourse_title"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ListView
            android:id="@+id/CompletedCourseList"
            android:layout_width="match_parent"
            android:layout_height="452dp"
            android:listSelector="#b9effd">

        </ListView>

        <Button
            android:id="@+id/CalculateCGPAButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/holo_blue_light"
            android:text="Calculate my current CGPA"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/goToCurrentCoursesButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/holo_green_light"
            android:text="PREDICT MY NEXT CGPA"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/gridLayout"
        android:layout_width="347dp"
        android:layout_height="157dp"
        android:columnCount="3"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905">

        <TextView
            android:id="@+id/textCourseID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_id"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.063"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.259" />

        <EditText
            android:id="@+id/editCourseID"
            android:layout_width="184dp"
            android:layout_height="47dp"
            android:ems="12"
            android:enabled="true"
            android:inputType="textNoSuggestions"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145" />


        <TextView
            android:id="@+id/textGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.779" />

        <EditText
            android:id="@+id/editGrade"
            android:layout_width="179dp"
            android:layout_height="55dp"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.725" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="144dp"
        android:layout_height="210dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951">

        <Button
            android:id="@+id/buttonCourseDelete"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:enabled="false"
            android:onClick="buttonCourseDeleteOnClick"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.904" />

        <Button
            android:id="@+id/buttonCourseCreate"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:enabled="true"
            android:onClick="buttonCourseCreateOnClick"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095" />

        <Button
            android:id="@+id/buttonCourseUpdate"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:enabled="false"
            android:onClick="buttonCourseUpdateOnClick"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
